--- a/src/pages/portfolio/portfolio.css
+++ b/src/pages/portfolio/portfolio.css
@@ -3,15 +3,15 @@
 }
 
 .portfolio__item {
-  position: relative;
-  border-radius: 10px;
-  overflow: hidden;
-  cursor: pointer;
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+    cursor: pointer;
 }
 
 .portfolio__img {
     height: 250px;
-    width: 100px;
+    width: 100%;
     object-fit: cover;
     vertical-align: middle;
 }
@@ -50,6 +50,7 @@
   display: grid;
   place-items: center;
   padding: 15px;
+  cursor: pointer;
 }
 
 .portfolio__modal-content {
@@ -63,7 +64,7 @@
 
 .modal__close {
     position: absolute;
-    top: -3.5s;
+    top: -3.5%;
     right: -8.5%;
     width: 50px;
     height: 50px;
